--- a/views/front_page.html
+++ b/views/front_page.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-hant-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>健身房會員系統</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        
+      </nav>
+    </header>
+  </body>
 </html>
