--- a/views/webcam.html
+++ b/views/webcam.html
@@ -9,8 +9,8 @@
   <body>
     <header >
       <nav class="navbackground">
-        <div class="icon">
-          <h2>請辨識身份</h2>
+        <div class="webcam-head">
+          <h2 class="header-text">請辨識身份</h2>
         </div>
       </nav>
     </header>
@@ -20,5 +20,8 @@
     <div class="webcam">
         webcam畫面
     </div>
+    <script>
+
+    </script>
   </body>
 </html>
