--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        
+        <a class="navbar-brand" href="/">健身世界</a>
       </nav>
     </header>
   </body>
