--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>健身房會員系統</title>
+    <link rel="stylesheet" href="all.css" />
+    <link rel="icon" href="/views/favicon.jpg" />
   </head>
   <body>
     <header>
-      <nav>
-        <a class="navbar-brand" href="/">健身世界</a>
+      <nav class="navbar">
+        <div class="home-frame">
+          <a class="nav-title" href="/views/index.html"
+            ><img
+              src="/views/sport.jpg"
+              alt="#"
+              title="首頁圖"
+              width="30"
+            />Powerful fitness</a>
+        </div>
+        <div>
+        <ul >
+          <li class="line-absolute"><a href="#" >關於我們</a></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
       </nav>
     </header>
   </body>
