--- a/views/all.css
+++ b/views/all.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   margin-top: 0;
-  background-color:whitesmoke;
+  background-color:white;
 }
 .webcam-head {
   margin-top: 0;
@@ -43,3 +43,24 @@ body {
   border-radius: 1%;
 }
 
+a:hover, a:visited, a:link, a:active {
+  text-decoration: none;
+  }
+
+a:visited{
+  color:black;
+}
+
+
+.nav-title{
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+.navbar{
+  background-color:whitesmoke;
+  height: 100px;
+  width: 100%;
+  border-bottom:1px black solid ;
+  width: 100%;
+}
