--- a/views/index.html
+++ b/views/index.html
@@ -18,16 +18,17 @@
               title="首頁圖"
               width="30"
             />Powerful fitness</a>
+            <div>
+            <ul class="home-ul">
+              <li><a href="#" class="site-nav__ite">關於我們</a></li>
+              <li><a href="#" class="site-nav__ite">關於我們</a></li>
+              <li><a href="#" class="site-nav__ite">關於我們</a></li>
+              <li><a href="#" class="site-nav__ite">關於我們</a></li>
+              <li><a href="#" class="site-nav__ite">關於我們</a></li>
+              </div>
+            </ul>
         </div>
-        <div>
-        <ul >
-          <li class="line-absolute"><a href="#" >關於我們</a></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
+        
       </nav>
     </header>
   </body>
