--- a/views/all.css
+++ b/views/all.css
@@ -53,14 +53,30 @@ a:visited{
 
 
 .nav-title{
-  font-size: xx-large;
+  font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
   color: black;
 }
 .navbar{
   background-color:whitesmoke;
-  height: 100px;
+  height: 30px;
   width: 100%;
   border-bottom:1px black solid ;
-  width: 100%;
+  padding: 30px;
+ 
+  
+}
+.home-frame{
+  display: flex;
+  align-items: center;
+}
+.home-ul{
+  display: flex;
+  
+}
+
+li{
+  list-style: none;
+  font-size: x-large;
+
 }
