--- a/views/index.html
+++ b/views/index.html
@@ -18,18 +18,27 @@
               title="首頁圖"
               width="30"
             />Powerful fitness</a>
-            <div>
-            <ul class="home-ul">
+            <div class="home-ul">
+            <ul class="home-ul mr-auto">
               <li><a href="#" class="site-nav__ite">關於我們</a></li>
-              <li><a href="#" class="site-nav__ite">關於我們</a></li>
-              <li><a href="#" class="site-nav__ite">關於我們</a></li>
-              <li><a href="#" class="site-nav__ite">關於我們</a></li>
-              <li><a href="#" class="site-nav__ite">關於我們</a></li>
+              <li><a href="#" class="site-nav__ite">最新消息</a></li>
+              <li><a href="#" class="site-nav__ite">會員中心</a></li>
+              <li><a href="#" class="site-nav__ite">健身課程</a></li>
+              <li><a href="#" class="site-nav__ite">課程類型</a></li>
               </div>
             </ul>
         </div>
-        
+        <section>
+          
+        </section>
       </nav>
     </header>
+
+
+    <div class="goTop">
+      <a href="#" class="goTopBtn jq-goTop">
+        <i class="fas fa-arrow-alt-circle-up fa-3x">TOP</i>
+      </a>
+    </div>
   </body>
 </html>
