--- a/views/all.css
+++ b/views/all.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   margin-top: 0;
-  background-color:white;
+  background-color: white;
 }
 .webcam-head {
   margin-top: 0;
@@ -10,17 +10,29 @@ body {
   height: 50px;
   padding-top: 10px;
 }
+.mr-auto,
+.mx-auto {
+  margin-right: auto !important;
+}
+ol ol,
+ul ul,
+ol ul,
+ul ol {
+  margin-bottom: 0;
+}
+
 @keyframes neon {
-    0%,
-    100% {
-      text-shadow: 0 0 20px #fff, 0 0 100px #fff, 0 0 20px #fff;
-    }
-    50% {
-      text-shadow: 0 0 50px #fff, 0 0 150px #fff, 0 0 50px #fff;
-    }
+  0%,
+  100% {
+    text-shadow: 0 0 20px #fff, 0 0 100px #fff, 0 0 20px #fff;
   }
+  50% {
+    text-shadow: 0 0 50px #fff, 0 0 150px #fff, 0 0 50px #fff;
+  }
+}
+
 .header-text {
-    margin: 0;
+  margin: 0;
   color: white;
   animation: neon 1.5s ease-in-out infinite alternate;
   text-align: center;
@@ -43,40 +55,61 @@ body {
   border-radius: 1%;
 }
 
-a:hover, a:visited, a:link, a:active {
+a:hover,
+a:visited,
+a:link,
+a:active {
   text-decoration: none;
-  }
-
-a:visited{
-  color:black;
+}
+a:link {
+  color: black;
+}
+a:visited {
+  color: black;
 }
 
-
-.nav-title{
+.nav-title {
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
   color: black;
+  margin-left: 100px;
 }
-.navbar{
-  background-color:whitesmoke;
+.navbar {
+  background-color: whitesmoke;
   height: 30px;
-  width: 100%;
-  border-bottom:1px black solid ;
+  width: 96.9%;
+  border-bottom: 1px black solid;
   padding: 30px;
- 
-  
 }
-.home-frame{
+.home-frame {
   display: flex;
   align-items: center;
 }
-.home-ul{
+.home-ul {
   display: flex;
-  
+  font-family: "Comic Sans MS";
+}
+li {
+  list-style: none;
 }
 
-li{
-  list-style: none;
+.site-nav__ite {
   font-size: x-large;
-
+  padding-left: 20px;
+  margin-left: 10px;
+  display: inline;
+}
+.goTop {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+}
+.goTopBtn {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.fa-arrow-alt-circle-up {
+  color: $primary;
 }
