--- a/views/all.css
+++ b/views/all.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   margin-top: 0;
+  padding: 0;
   background-color: white;
 }
 .webcam-head {
@@ -67,19 +68,28 @@ a:link {
 a:visited {
   color: black;
 }
-
+.header{
+  height: 100px;
+  display: block;
+  clear: both;
+  width: 100%;
+  height: 100px;
+  
+}
 .nav-title {
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
   color: black;
   margin-left: 100px;
+  
 }
 .navbar {
   background-color: whitesmoke;
-  height: 30px;
-  width: 96.9%;
-  border-bottom: 1px black solid;
   padding: 30px;
+  height: 100px;
+  border-bottom: 1px black solid;
+  
+  
 }
 .home-frame {
   display: flex;
@@ -110,4 +120,11 @@ li {
   outline: none;
   cursor: pointer;
 }
-
+.co{
+  display: block;
+  margin-bottom: 20px;
+}
+.w-500{
+  width: 500px;
+  height: 500px;
+}
