--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,11 @@
     <title>健身房會員系統</title>
     <link rel="stylesheet" href="all.css" />
     <link rel="icon" href="/views/favicon.jpg" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="navbar">
         <div class="home-frame">
           <a class="nav-title" href="/views/index.html"
@@ -28,12 +30,32 @@
               </div>
             </ul>
         </div>
-        <section>
-          
-        </section>
       </nav>
+      <span class="co"> </span>
     </header>
-
+    <section class="section">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../image/sport_1.jpg" class="w-500" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../image/sport_2.jpg" class="w-500" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../image/sport_3.jpg" class="w-500" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
 
     <div class="goTop">
       <a href="#" class="goTopBtn jq-goTop">
