--- a/views/all.css
+++ b/views/all.css
@@ -88,8 +88,6 @@ a:visited {
   padding: 30px;
   height: 100px;
   border-bottom: 1px black solid;
-  
-  
 }
 .home-frame {
   display: flex;
@@ -98,6 +96,7 @@ a:visited {
 .home-ul {
   display: flex;
   font-family: "Comic Sans MS";
+  padding-top:8px;
 }
 li {
   list-style: none;
@@ -108,6 +107,17 @@ li {
   padding-left: 20px;
   margin-left: 10px;
   display: inline;
+  font-family:'微軟正黑體' ;
+}
+
+.co{
+  display: block;
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+}
+.w-500{
+  height: 500px;
+  width: 100%;
 }
 .goTop {
   position: fixed;
@@ -119,12 +129,4 @@ li {
   border: none;
   outline: none;
   cursor: pointer;
-}
-.co{
-  display: block;
-  margin-bottom: 20px;
-}
-.w-500{
-  width: 500px;
-  height: 500px;
 }
