--- a/views/index.html
+++ b/views/index.html
@@ -37,13 +37,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../image/sport_1.jpg" class="w-500" alt="...">
+            <img src="../image/sport_1.jpg" class="w-500" alt="運動照">
           </div>
           <div class="carousel-item">
-            <img src="../image/sport_2.jpg" class="w-500" alt="...">
+            <img src="../image/sport_2.jpg" class="w-500" alt="運動照">
           </div>
           <div class="carousel-item">
-            <img src="../image/sport_3.jpg" class="w-500" alt="...">
+            <img src="../image/sport_3.jpg" class="w-500" alt="運動照">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -56,6 +56,7 @@
         </button>
       </div>
     </section>
+    
 
     <div class="goTop">
       <a href="#" class="goTopBtn jq-goTop">
