--- a/views/index.html
+++ b/views/index.html
@@ -1,67 +1,83 @@
 <!DOCTYPE html>
 <html lang="zh-hant-TW">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>健身房會員系統</title>
-    <link rel="stylesheet" href="all.css" />
-    <link rel="icon" href="/views/favicon.jpg" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header class="header">
-      <nav class="navbar">
-        <div class="home-frame">
-          <a class="nav-title" href="/views/index.html"
-            ><img
-              src="/views/sport.jpg"
-              alt="#"
-              title="首頁圖"
-              width="30"
-            />Powerful fitness</a>
-            <div class="home-ul">
-            <ul class="home-ul mr-auto">
-              <li><a href="#" class="site-nav__ite">關於我們</a></li>
-              <li><a href="#" class="site-nav__ite">最新消息</a></li>
-              <li><a href="#" class="site-nav__ite">會員中心</a></li>
-              <li><a href="#" class="site-nav__ite">健身課程</a></li>
-              <li><a href="#" class="site-nav__ite">課程類型</a></li>
-              </div>
-            </ul>
-        </div>
-      </nav>
-      <span class="co"> </span>
-    </header>
-    <section class="section">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../image/sport_1.jpg" class="w-500" alt="運動照">
-          </div>
-          <div class="carousel-item">
-            <img src="../image/sport_2.jpg" class="w-500" alt="運動照">
-          </div>
-          <div class="carousel-item">
-            <img src="../image/sport_3.jpg" class="w-500" alt="運動照">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </section>
-    
 
-    <div class="goTop">
-      <a href="#" class="goTopBtn jq-goTop">
-        <i class="fas fa-arrow-alt-circle-up fa-3x">TOP</i>
-      </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>健身房會員系統</title>
+  <link rel="stylesheet" href="all.css" />
+  <link rel="icon" href="/views/favicon.jpg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header class="header">
+
+    <nav class="navbar">
+      <div class="home-frame">
+        <a class="nav-title" href="/views/index.html"><img src="/views/sport.jpg" alt="#" title="首頁圖" width="30"
+            class="home-img" />Powerful fitness</a>
+        <div class="home-ul">
+          <ul class="home-ul mr-auto">
+            <li><a href="#" class="site-nav__ite">關於我們</a></li>
+            <li><a href="#" class="site-nav__ite">最新消息</a></li>
+            <li><a href="#" class="site-nav__ite">會員中心</a></li>
+            <li><a href="#" class="site-nav__ite">健身課程</a></li>
+            <li><a href="#" class="site-nav__ite">課程類型</a></li>
+        </div>
+        </ul>
+      </div>
+    </nav>
+
+  </header>
+  <section class="section">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../image/sport_1.jpg" class="w-500" alt="運動照">
+        </div>
+        <div class="carousel-item">
+          <img src="../image/sport_2.jpg" class="w-500" alt="運動照">
+        </div>
+        <div class="carousel-item">
+          <img src="../image/sport_3.jpg" class="w-500" alt="運動照">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-  </body>
+  </section>
+
+  <div class="train_set">
+    <h2 class="train_head_text">健身訓練</h2>
+  </div>
+  <div class="train_grid">
+    <div class="train"><h3>機械式器材</h3><img src="../image/sport_5.jpg" alt="" class="train_1"></div>
+    <div class="train"><h3>自由重量</h3><img src="../image/sport_6.jpg" alt="" class="train_1"></div>
+    <div class="train"><h3>有氧運動</h3></div>
+  </div>
+
+
+  <div class="goTop">
+    <a href="#" class="goTopBtn jq-goTop">
+      <i class="fas fa-arrow-alt-circle-up fa-3x">TOP</i>
+    </a>
+  </div>
+</body>
+
 </html>
